Remove back home btn from both report pages

--- a/reports/templates/reports/add-report-details.html
+++ b/reports/templates/reports/add-report-details.html
@@ -1,30 +1,27 @@
 {% extends 'reports/report-base.html' %}
 
 {% block report_header %}
-    <h2>Your report message has been submitted.</h2>
-    <br>
-    <h4>If you are able to provide more information to the report, please fill out as much as you can!</h4>
+<h2>Your report message has been submitted.</h2>
+<br>
+<h4>If you are able to provide more information to the report, please fill out as much as you can!</h4>
 {% endblock %}
 
 {% block report_form %}
-    <form action="{% url 'add-report-details' %}" method="post" class="form full-form">
-        {% csrf_token %}
+<form action="{% url 'add-report-details' %}" method="post" class="form full-form">
+    {% csrf_token %}
 
-        {% for field in report_details_form %}
-        <div class="form-group row">
-            <label class="col-form-label">{{ field.label }}</label>
-            <div class="">
-                {{ field }}
-            </div>
+    {% for field in report_details_form %}
+    <div class="form-group row">
+        <label class="col-form-label">{{ field.label }}</label>
+        <div class="">
+            {{ field }}
         </div>
-        {% endfor %}
-        <div class="form-group row text-center">
-            <div class="col-6">
-                <button type="submit" class="btn btn-success">Add details to your report</button>
-            </div>
-            <div class="col-6">
-                <a href="{% url 'home' %}" class="btn btn-info">Back Home</a>
-            </div>
+    </div>
+    {% endfor %}
+    <div class="form-group row text-center">
+        <div class="col">
+            <button type="submit" class="btn btn-info">Add details to your report</button>
         </div>
-    </form>
+    </div>
+</form>
 {% endblock %}
