--- a/reports/templates/reports/create-full-report.html
+++ b/reports/templates/reports/create-full-report.html
@@ -24,11 +24,8 @@
             </div>
         {% endfor %}
         <div class="form-group row text-center">
-            <div class="col-6">
-        <button type="submit" class="btn btn-success">Create report</button>
-            </div>
-            <div class="col-6">
-                <a href="{% url 'home' %}" class="btn btn-info">Back Home</a>
+            <div class="col">
+                <button type="submit" class="btn btn-info">Create report</button>
             </div>
         </div>
     </form>
