--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,7 @@
     <div>
         <div class="bg-head bg-logo-icon">
 
-            <div id="nav-logo"></div>
+            <a href="{% url 'home' %}"><div id="nav-logo"></div></a>
             <h1 class="onyx text-center main-title">
                 Human Trafficing and Slavery Prevention
             </h1>
