--- a/static/css/style.css
+++ b/static/css/style.css
@@ -14,6 +14,32 @@ p {
     margin: 0;
 }
 
+/* Django messages */
+
+#msg-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#django-msg {
+    margin-bottom: 0;
+    height: 2.5em;
+    padding: 0;
+    margin: auto;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    background-color: white;
+    top: 0;
+    border-radius: 0;
+    border-bottom: 1px solid darkgray;
+}
+
+#msg-content {
+    margin: auto;
+}
+
 /* General styles */
 
 .bg-head {
