--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -28,37 +28,35 @@
 </div>
 
 <div id="testimonies">
-    <div class="header-container3">
-        <h2 id="carousel-stories-heading">Survivor stories</h2>
-        <div id="story-carousel" class="carousel slide">
-            <div class="carousel-inner">
-                {% for story in homepage_stories %}
-                <div class="carousel-item {% if forloop.first %}active{% endif %}">
-                    <div class="carousel-story-container carousel-style">
-                        <h5>{{ story.title }}</h5>
-                        <hr>
-                        <p>{{ story.content }}</p>
-                    </div>
+    <h2 id="carousel-stories-heading">Survivor stories</h2>
+    <div id="story-carousel" class="carousel slide">
+        <div class="carousel-inner">
+            {% for story in homepage_stories %}
+            <div class="carousel-item {% if forloop.first %}active{% endif %}">
+                <div class="carousel-story-container">
+                    <h5>{{ story.title }}</h5>
+                    <hr>
+                    <p>{{ story.content }}</p>
                 </div>
-                {% endfor %}
             </div>
-            <button class="carousel-control-prev " type="button" data-bs-target="#story-carousel" data-bs-slide="prev">
-                <span aria-hidden="true">
-                    <img class="carousel-arrows " src="{% static 'img/left-arrow-story-carousel.svg' %}" alt="Previous">
-                </span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#story-carousel" data-bs-slide="next">
-                <span aria-hidden="true">
-                    <img class="carousel-arrows " src="{% static 'img/right-arrow-story-carousel.svg' %}" alt="Next">
-                </span>
-                <span class="visually-hidden">Next</span>
-            </button>
+            {% endfor %}
         </div>
-        <hr class="carousel-seperator munsell">
-        <div class="text-center">
-            <a href="{% url 'stories' %}" class="btn" id="read-more-stories-link">Read more survivor stories</a>
-        </div>
+        <button class="carousel-control-prev " type="button" data-bs-target="#story-carousel" data-bs-slide="prev">
+            <span aria-hidden="true">
+                <img class="carousel-arrows " src="{% static 'img/left-arrow-story-carousel.svg' %}" alt="Previous">
+            </span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#story-carousel" data-bs-slide="next">
+            <span aria-hidden="true">
+                <img class="carousel-arrows " src="{% static 'img/right-arrow-story-carousel.svg' %}" alt="Next">
+            </span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+    <hr class="carousel-seperator munsell">
+    <div class="text-center">
+        <a href="{% url 'stories' %}" class="btn" id="read-more-stories-link">Read more survivor stories</a>
     </div>
 </div>
 
