--- a/static/css/style.css
+++ b/static/css/style.css
@@ -23,21 +23,25 @@ p {
 }
 
 #django-msg {
-    margin-bottom: 0;
+    margin-top: 15px !important;
     height: 2.5em;
     padding: 0;
     margin: auto;
     display: flex;
     align-items: center;
-    width: 100%;
-    background-color: white;
+    width: 250px;
+    background-color: #0dcaf0;
     top: 0;
-    border-radius: 0;
+    border-radius: 5px;
     border-bottom: 1px solid darkgray;
 }
 
 #msg-content {
     margin: auto;
+}
+
+.msg-btn {
+    margin: 5px !important;
 }
 
 /* General styles */
