--- a/staticfiles/css/index.css
+++ b/staticfiles/css/index.css
@@ -41,3 +41,19 @@
     min-height: 70vh;
     height: fit-content;
 }
+
+.image-control{
+    width: 500px;
+}
+
+@media (max-width:480px){
+    .image-control{
+        width: 300px;
+    }
+    .news-container-mobile{
+        width: 90%;
+        height: auto;
+        margin: 10px auto;
+    }
+    
+}
