--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -1,20 +1,56 @@
-
-
 /*main tags rules*/
-html, body {
-    width: 100%;
-    overflow-x:hidden;
+html,
+body {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
-h1, h2, h3, p {
+h1,
+h2,
+h3,
+p {
     padding: 0;
     margin: 0;
+}
+
+/* Django messages */
+
+#msg-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#django-msg {
+    margin-top: 15px !important;
+    height: 2.5em;
+    padding: 0;
+    margin: auto;
+    display: flex;
+    align-items: center;
+    width: 250px;
+    background-color: #0dcaf0;
+    top: 0;
+    border-radius: 5px;
+    border-bottom: 1px solid darkgray;
+}
+
+#msg-content {
+    margin: auto;
+}
+
+.msg-btn {
+    margin: 5px !important;
 }
 
 /* General styles */
 
 .bg-head {
     background-color: #F5F1E3 !important;
+    display: flex;
+    justify-content: center;
+    padding-top: 0.5em;
 }
 
 .links {
@@ -29,6 +65,18 @@ h1, h2, h3, p {
 .btn-placement {
     display: flex;
     justify-content: center;
+}
+
+/* Footer */
+
+#staff-login-link {
+    text-decoration: none;
+}
+
+#page-footer {
+    padding-top: 1.5em;
+    padding-bottom: 1em;
+    margin-top: auto;
 }
 
 /* Buttons */
@@ -48,7 +96,7 @@ h1, h2, h3, p {
     width: auto;
 }
 
-@media (max-width:480px){
+@media (max-width:480px) {
     .image-high {
         max-height: 50vh;
         width: auto;
@@ -56,15 +104,14 @@ h1, h2, h3, p {
 
 }
 
-.carousel-style {
-    max-width: 70vw;
-}
-
 /* Home Page */
 
-.main-title{
-    font-size: 35px;
+.main-title {
+    font-size: 1.2em;
+    padding: 1em 0;
 
+    width: fit-content;
+    display: inline-block;
 }
 
 .background {
@@ -75,49 +122,58 @@ h1, h2, h3, p {
 
 .outlined-text {
     text-shadow:
-    -1px -1px 0 #313638,
-     1px -1px 0 #313638,
-    -1px 1px 0 #313638,
-     1px 1px 0 #313638;
+        -1px -1px 0 #313638,
+        1px -1px 0 #313638,
+        -1px 1px 0 #313638,
+        1px 1px 0 #313638;
 }
 
 .hide {
     display: none;
 }
 
-.main-title::before  {
-    position: absolute;
+#nav-logo {
+    width: 3em;
+    min-height: 100%;
+    display: inline-block;
+    position: relative;
+    flex-shrink: 1;
+    margin: 0 1em;
+}
+
+#nav-logo::before {
     content: "";
-    width: 25%;
-    height: 25%;
-    left: 10%;
-    top: 0;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.0)), url("../img/icon_2.png")!important;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.0)), url(../img/logo.png);
+    position: absolute;
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center center;
     z-index: 1;
     opacity: 0.5;
+    width: 100%;
+    height: 100%;
+}
 
-  }
 
-  @media (max-width:768px){
-    .main-title::before  {
-        position: absolute;
-        content: "";
-        width: 20%;
-        height: 20%;
-        top: 0;
-        background-image: linear-gradient(rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.0)), url("../img/icon_2.png")!important;
-        background-repeat: no-repeat;
-        background-size: contain;
-        background-position: center center;
-        z-index: 1;
-        opacity: 0.5;
+@media (min-width:768px) {
+    .main-title {
+        font-size: 1.6em;
+    }
 
-      }
+    #nav-logo {
+        width: 4em;
+    }
+}
 
-  }
+@media (min-width:1200px) {
+    .main-title {
+        font-size: 2em;
+    }
+
+    #nav-logo {
+        width: 5em;
+    }
+}
 
 /* Testeminies */
 
@@ -125,18 +181,22 @@ h1, h2, h3, p {
     padding: 10px;
 }
 
-.reason:hover {
-    border: 1px solid #313638;
-    border-radius: 5px;
-    background-color: #F5F1E3;
-    padding: 20px;
+#testimonies {
+    padding: 2em;
+    border: 0.3em solid black;
+    border-style: double;
+    border-right: 0;
+    border-left: 0;
+    /* margin: 0.2em; */
+    border-color: #6c6c6c;
+    background: #ffffff;
 }
 
 /* Advice */
 
 .sign-heading {
     text-decoration: underline;
-    text-decoration-color:#126a75 ;
+    text-decoration-color: #126a75;
     text-underline-offset: 8px;
     padding-left: 10px;
 }
@@ -160,7 +220,7 @@ h1, h2, h3, p {
     font-weight: 500;
 }
 
-.testemony:hover > .text-muted {
+.testemony:hover>.text-muted {
     color: #313638 !important;
 }
 
@@ -168,9 +228,10 @@ h1, h2, h3, p {
 
 .full-form {
     margin: 15px;
-    border: 1px solid #313638;
-    border-radius: 5px;
-    background-color: #F5F1E3;
+}
+
+.login-form .form-group label {
+    padding-left: 0;
 }
 
 .form-group {
@@ -178,24 +239,24 @@ h1, h2, h3, p {
     justify-content: flex-start;
     align-items: center;
     margin-bottom: 15px;
-  }
+}
 
-  .form-group label {
+.form-group label {
     margin-left: 10%;
     text-align: left;
-  }
+}
 
-  .form-group input,
-  .form-group select,
-  .form-group textarea {
+.form-group input,
+.form-group select,
+.form-group textarea {
     margin-left: 10%;
     width: 80%;
-  }
+}
 
-  #add-details-button {
+#add-details-button {
     float: right;
     margin-right: 15px;
-  }
+}
 
 .pl {
     margin-left: 15px;
@@ -223,28 +284,33 @@ h1, h2, h3, p {
     color: #FFFFFF;
 }
 
-.bg-onix{
-    background-color: #313638!important;
+.bg-onix {
+    background-color: #313638 !important;
+}
+
+.bg-munsell {
+    background-color: #1B9AAA !important;
 }
 
 /*Nav bar elements*/
 
 .nav-link {
-    color: white!important;
+    color: white !important;
     position: relative;
+    z-index: 10;
 }
 
 .nav-link:hover {
-    color: #1B9AAA!important;
+    color: #1B9AAA !important;
     transition: 0.5s ease-in-out all;
 }
 
-.nav-link::before{
+.nav-link::before {
     position: absolute;
     content: "";
     bottom: 0;
     left: 0;
-    border-bottom: #1B9AAA solid 1px ;
+    border-bottom: #1B9AAA solid 1px;
     width: 0%;
     text-align: center;
     transition: all 0.3s ease-in-out;
@@ -261,7 +327,7 @@ h1, h2, h3, p {
 
 }
 
-@media (max-width:990px){
+@media (max-width:990px) {
 
     .nav-link:hover::before {
         width: 15%;
@@ -285,7 +351,8 @@ h1, h2, h3, p {
 }
 
 .carousel-story-container {
-    display: flex;
+    display: flex
+;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -293,33 +360,47 @@ h1, h2, h3, p {
     text-align: center;
     width: 70%;
     margin: 1em auto;
+    border: 0.3em solid #aecfd391;
+    border-style: double;
+    border-left: 0;
+    border-right: 0;
+    border-radius: 3%;
 }
 
 .carousel-arrows {
     width: 64px;
     max-width: 100%;
+
 }
 
-.carousel-control-next, .carousel-control-prev {
-   max-width: 15%;
+.carousel-control-next,
+.carousel-control-prev {
+    max-width: 15%;
 }
 
-.carousel-control-next:not(:hover), .carousel-control-prev:not(:hover){
+.carousel-control-next:not(:hover),
+.carousel-control-prev:not(:hover) {
     opacity: 0.5;
 }
 
 #read-more-stories-link {
     text-decoration: none;
-    color:black;
+    color: black;
     margin: 1em;
     display: inline-block;
     font-weight: bold;
+    border: 1px solid #bbbbbb;
 }
 
 /* Workers */
 
 .login-form {
     max-width: fit-content;
+    margin: auto;
+}
+
+.login-form .form-group {
+    margin: 2em 0;
 }
 
 .page-wrapper {
