maint: Add btn-edit to all the buttons

--- a/reports/templates/reports/add-report-details.html
+++ b/reports/templates/reports/add-report-details.html
@@ -20,7 +20,7 @@
     {% endfor %}
     <div class="form-group row text-center">
         <div class="col">
-            <button type="submit" class="btn btn-info">Add details to your report</button>
+            <button type="submit" class="btn btn-edit">Add details to your report</button>
         </div>
     </div>
 </form>
