--- a/reports/templates/reports/create-full-report.html
+++ b/reports/templates/reports/create-full-report.html
@@ -25,7 +25,7 @@
         {% endfor %}
         <div class="form-group row text-center">
             <div class="col">
-                <button type="submit" class="btn btn-info">Create report</button>
+                <button type="submit" class="btn btn-edit">Create report</button>
             </div>
         </div>
     </form>
