--- a/reports/templates/reports/workers/worker-login.html
+++ b/reports/templates/reports/workers/worker-login.html
@@ -23,7 +23,7 @@
           </div>
           <div class="form-group row text-center">
             <div class="col-12">
-              <button type="submit" class="btn btn-info">Login</button>
+              <button type="submit" class="btn btn-edit">Login</button>
             </div>
           </div>
         </form>
