--- a/reports/templates/reports/workers/view-reports.html
+++ b/reports/templates/reports/workers/view-reports.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 <div class="container">
-    <a href="{% url 'worker-logout' %}" class="btn btn-info mt-4">Logout</a>
+    <a href="{% url 'worker-logout' %}" class="btn btn-edit mt-4">Logout</a>
 
     <div class="row row-cols-1 row-cols-md-2 row-cols-xl-3 g-4 mt-1">
         {% for report in reports %}
