--- a/reports/templates/reports/add-report-details.html
+++ b/reports/templates/reports/add-report-details.html
@@ -12,7 +12,7 @@
 
     {% for field in report_details_form %}
     <div class="form-group row">
-        <label class="col-form-label">{{ field.label }}</label>
+        <label class="col-form-label" for="{{ field.auto_id }}">{{ field.label }}</label>
         <div class="">
             {{ field }}
         </div>
