accessibility: Remove empty nav-brand

--- a/templates/base.html
+++ b/templates/base.html
@@ -37,14 +37,13 @@
     <div>
         <div class="bg-head bg-logo-icon">
 
-            <a href="{% url 'home' %}"><div id="nav-logo"></div></a>
+            <a href="{% url 'home' %}" aria-label="home"><div id="nav-logo"></div></a>
             <h1 class="onyx text-center main-title">
                 Human Trafficing and Slavery Prevention
             </h1>
         </div>
         <nav class="navbar navbar-expand-sm  bg-dark  border-body" data-bs-theme="dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                     aria-label="Toggle navigation">
