Quick restyle of homepage news section

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -96,7 +96,7 @@
 <!-- Latest News Section -->
 <div class="container-fluid">
     <div class="row mt-5 bg-munsell px-3">
-        <h2 class="text-center">Latest News</h2>
+        <h2 class="text-center p-3">Latest News</h2>
         {% for news in latest_news %}
         <div class="col-md-4 mb-3 news-container-mobile">
             <div class="card h-100 h-md-50">
