--- a/static/css/style.css
+++ b/static/css/style.css
@@ -290,7 +290,7 @@ p {
 }
 
 .bg-munsell {
-    background-color: #1B9AAA !important;
+    background-color: #19a3b650 !important;
 }
 
 /*Nav bar elements*/
