style: Add border to buttons and change bg colour

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -82,7 +82,7 @@
                     someone you know needs help.</p>
                 <br>
                 <div class="btn-placement">
-                    <a href="{% url 'advice' %}" class="btn btn-lg btn-edit mb-3">Click to learn more</a>
+                    <a href="{% url 'advice' %}" class="btn btn-lg btn-edit mb-3">Learn more</a>
                 </div>
             </div>
             <div class="col-lg-6 col-md justify-content-center align-items-center text-center p-0">
