fixed recource links2

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -123,23 +123,23 @@
             <div class="col-6 mt-5">
                 <div class="row bg-ngo mt-5">
                     <h6 class="sign-heading text-center">General Awareness and Advocacy</h6>
-                    <a class="ngo-link mt-2" href="https://www.gov.uk/government/publications/modern-slavery-training-resource-page/modern-slavery-training-resource-page">UK GOV: Modern slavery training</a>
-                    <a class="ngo-link" href="http://southyorksmsp.co.uk/resources-and-training/">South Yorkshire Modern Slavery Partnership</a>
+                    <a class="ngo-link mt-2" target="_blank" href="https://www.gov.uk/government/publications/modern-slavery-training-resource-page/modern-slavery-training-resource-page">UK GOV: Modern slavery training</a>
+                    <a class="ngo-link" target="_blank" href="http://southyorksmsp.co.uk/resources-and-training/">South Yorkshire Modern Slavery Partnership</a>
                 </div>
                 <div class="row bg-ngo mt-5">
                     <h6 class="sign-heading text-center">Support and Resources</h6>
-                    <a class="ngo-link mt-2" href="https://www.stopexploitationherts.org.uk/index.php/training-and-resources/">Hertfordshire Modern Slavery Partnership</a>
-                    <a class="ngo-link" href="https://hopeforjustice.org/resources-uk/">Hope for Justice: Resources UK & Further Reading</a>
+                    <a class="ngo-link mt-2" target="_blank" href="https://www.stopexploitationherts.org.uk/index.php/training-and-resources/">Hertfordshire Modern Slavery Partnership</a>
+                    <a class="ngo-link" target="_blank" href="https://hopeforjustice.org/resources-uk/">Hope for Justice: Resources UK & Further Reading</a>
                 </div>
                 <div class="row bg-ngo mt-5">
                     <h6 class="sign-heading text-center">Educational Platforms</h6>
-                    <a class="ngo-link mt-2" href="https://www.e-lfh.org.uk/programmes/modern-slavery/">Elearning for healthcare</a>
-                    <a class="ngo-link" href="https://www.gov.wales/slavery">Wales GOV: Equality and human rights collection</a>
+                    <a class="ngo-link mt-2" target="_blank" href="https://www.e-lfh.org.uk/programmes/modern-slavery/">Elearning for healthcare</a>
+                    <a class="ngo-link" target="_blank" href="https://www.gov.wales/slavery">Wales GOV: Equality and human rights collection</a>
                 </div>
                 <div class="row bg-ngo mt-5 mb-5">
                     <h6 class="sign-heading text-center">Community Engagement</h6>
-                    <a class="ngo-link mt-2" href="https://www.local.gov.uk/topics/community-safety/modern-slavery/%20independent-anti-slavery-commissioner">Local Government Association</a>
-                    <a class="ngo-link" href="https://preventht.org/programs/community-empowerment/">Anti-Trafficking International's Community Ambassador Program</a>
+                    <a class="ngo-link mt-2" target="_blank" href="https://www.local.gov.uk/topics/community-safety/modern-slavery/%20independent-anti-slavery-commissioner">Local Government Association</a>
+                    <a class="ngo-link" target="_blank" href="https://preventht.org/programs/community-empowerment/">Anti-Trafficking International's Community Ambassador Program</a>
                 </div>
             </div>
             <div class="col-6"></div>
@@ -148,23 +148,23 @@
             <div class="col mt-5">
                 <div class="row bg-ngo mt-3 ngo-margin">
                     <h6 class="sign-heading text-center">General Awareness and Advocacy</h6>
-                    <a class="ngo-link mt-2" href="https://www.gov.uk/government/publications/modern-slavery-training-resource-page/modern-slavery-training-resource-page">UK GOV: Modern slavery training</a>
-                    <a class="ngo-link" href="http://southyorksmsp.co.uk/resources-and-training/">South Yorkshire Modern Slavery Partnership</a>
+                    <a class="ngo-link mt-2" target="_blank" href="https://www.gov.uk/government/publications/modern-slavery-training-resource-page/modern-slavery-training-resource-page">UK GOV: Modern slavery training</a>
+                    <a class="ngo-link" target="_blank" href="http://southyorksmsp.co.uk/resources-and-training/">South Yorkshire Modern Slavery Partnership</a>
                 </div>
                 <div class="row bg-ngo mt-3 ngo-margin">
                     <h6 class="sign-heading text-center">Support and Resources</h6>
-                    <a class="ngo-link mt-2" href="https://www.stopexploitationherts.org.uk/index.php/training-and-resources/">Hertfordshire Modern Slavery Partnership</a>
-                    <a class="ngo-link" href="https://hopeforjustice.org/resources-uk/">Hope for Justice: Resources UK & Further Reading</a>
+                    <a class="ngo-link mt-2" target="_blank" href="https://www.stopexploitationherts.org.uk/index.php/training-and-resources/">Hertfordshire Modern Slavery Partnership</a>
+                    <a class="ngo-link" target="_blank" href="https://hopeforjustice.org/resources-uk/">Hope for Justice: Resources UK & Further Reading</a>
                 </div>
                 <div class="row bg-ngo mt-3 ngo-margin">
                     <h6 class="sign-heading text-center">Educational Platforms</h6>
-                    <a class="ngo-link mt-2" href="https://www.e-lfh.org.uk/programmes/modern-slavery/">Elearning for healthcare</a>
-                    <a class="ngo-link" href="https://www.gov.wales/slavery">Wales GOV: Equality and human rights collection</a>
+                    <a class="ngo-link mt-2" target="_blank" href="https://www.e-lfh.org.uk/programmes/modern-slavery/">Elearning for healthcare</a>
+                    <a class="ngo-link" target="_blank" href="https://www.gov.wales/slavery">Wales GOV: Equality and human rights collection</a>
                 </div>
                 <div class="row bg-ngo mt-3 mb-3 ngo-margin">
                     <h6 class="sign-heading text-center">Community Engagement</h6>
-                    <a class="ngo-link mt-2" href="https://www.local.gov.uk/topics/community-safety/modern-slavery/%20independent-anti-slavery-commissioner">Local Government Association</a>
-                    <a class="ngo-link" href="https://preventht.org/programs/community-empowerment/">Anti-Trafficking International's Community Ambassador Program</a>
+                    <a class="ngo-link mt-2" target="_blank" href="https://www.local.gov.uk/topics/community-safety/modern-slavery/%20independent-anti-slavery-commissioner">Local Government Association</a>
+                    <a class="ngo-link" target="_blank" href="https://preventht.org/programs/community-empowerment/">Anti-Trafficking International's Community Ambassador Program</a>
                 </div>
             </div>
         </div>
