--- a/news/templates/news.html
+++ b/news/templates/news.html
@@ -17,7 +17,7 @@
                    
                 </div>
                 <div>
-                    <a href="{{ news.link }}" class="btn btn-primary mb-2 ms-2" target="_blank">Read More</a>
+                    <a href="{{ news.link }}" class="btn btn-edit mb-2 ms-2" target="_blank">Read More</a>
                 </div>
             </div>
         </div>
