--- a/news/templates/news.html
+++ b/news/templates/news.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <div class="container my-2">
-    <h1 class="text-center">Latest News</h1>
+    <h1 class="text-center p-3">Latest News</h1>
     <div class="row">
         {% for news in page_obj %}
         <div class="col-md-6 col-lg-4 col-sm-12 mb-4">
