fix: News links on homepage

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -108,7 +108,7 @@
                     <p class="card-text">{{ news.description|truncatechars:100 }}</p>
                 </div>
                 <div class="card-footer text-end">
-                    <a href="{{ news.url }}" class="btn btn-edit" target="_blank">Read More</a>
+                    <a href="{{ news.link }}" class="btn btn-edit" target="_blank">Read More</a>
                 </div>
             </div>
         </div>
