--- a/static/css/style.css
+++ b/static/css/style.css
@@ -29,10 +29,10 @@ p {
     display: flex;
     align-items: center;
     width: 250px;
-    background-color: #0dcaf0;
     top: 0;
     border-radius: 5px;
     border-bottom: 1px solid darkgray;
+    background-color: #b4f6ff;
 }
 
 #msg-content {
