extend django-msg position absolute and to the right

--- a/templates/base.html
+++ b/templates/base.html
@@ -63,17 +63,15 @@
     </div>
 
     <!-- Django messages -->
-    <div id="msg-container" class="container">
-        <div class="row">
+    <div id="msg-container">
             <!-- <div class="col-md-8 offset-md-2"> -->
             {% for message in messages %}
-                <div class="text-center msg-g alert {{ message.tags }}" id="django-msg" role="alert">
+                <div class="text-center alert {{ message.tags }}" id="django-msg" role="alert">
                     <span id="msg-content">{{ message | safe }}</span>
                     <button type="button" class="btn-close msg-btn" data-bs-dismiss="alert" aria-label="Close"></button>
                 </div>
             {% endfor %}
             <!-- </div> -->
-        </div>
     </div>
     {% block content %}
 
