--- a/static/css/style.css
+++ b/static/css/style.css
@@ -20,6 +20,7 @@ p {
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
 }
 
 #django-msg {
@@ -31,8 +32,12 @@ p {
     width: 250px;
     top: 0;
     border-radius: 5px;
-    border-bottom: 1px solid darkgray;
-    background-color: #b4f6ff;
+    border: 1px solid darkgray;
+    box-shadow: #8080805e 1px 1px 1px 0px;
+    background-color: #ffffff;
+    position: absolute;
+    top: 0.5em;
+    right: 0.5em;
 }
 
 #msg-content {
