--- a/reports/templates/reports/workers/view-reports.html
+++ b/reports/templates/reports/workers/view-reports.html
@@ -9,7 +9,7 @@
 <div class="container">
     <a href="{% url 'worker-logout' %}" class="btn btn-edit mt-4">Logout</a>
 
-    <div class="row row-cols-1 row-cols-md-2 row-cols-xl-3 g-4 mt-1">
+    <div class="row row-cols-1 row-cols-lg-2 g-4 mt-1">
         {% for report in reports %}
         <div class="col">
             <div class="card">
